# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
dokumentaatio/: definition_of_done.md  loppuraportti.md
src/: AppLibrary.py  add_tips.py  app.py  build.py  console_io.py  database.py  db_connection.py  index.py  initialize_db.py
src/entities/: reading_tip.py  tag.py  tags.py
src/repositories/: reading_tip_repository.py  tags_repository.py  tip_tags_repository.py
src/services/: reading_tip_service.py  tag_service.py  tags_service.py  tip_tags_service.py
src/tests/: app_test.py  conftest.py  stub_io.py
src/tests/entities/: reading_tip_test.py  tag_test.py
src/tests/repositories/: reading_tip_repository_test.py  tags_repository_test.py  tip_tags_repository_test.py
src/tests/robot/: app.robot  resource.robot
src/tests/services/: reading_tip_service_test.py  tags_service_test.py  tip_tags_service_test.py
src/tests/ui/: console_io_test.py  console_table.test.py  console_table_test.py
src/ui/: app.py  console_io.py  console_table.py
