[tool.poetry]
name = "Ohtu-miniprojekti"
version = "0.1.0"
description = "Lukivinkkisovellus"
authors = ["Hattivatit"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.4"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
