[tool.poetry]
name = "Ohtu-miniprojekti"
version = "0.1.0"
description = "Lukivinkkisovellus"
authors = ["Hattivatit"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.4"
pytest = "^7.1.1"
invoke = "^1.7.0"
robotframework = "^5.0"
rich = "^12.2.0"
colorama = "^0.4.4"
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
